--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {   //Colocar siempre de primero
         classpath "com.android.tools.build:gradle:7.1.2"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1'
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
     }
 }
 
